Fix layout of about page on smaller screen sizes

--- a/frontend/src/app/about/about.component.css
+++ b/frontend/src/app/about/about.component.css
@@ -3,13 +3,15 @@ mat-card {
 }
 
 #teamMemberSection {
-  margin-left: 138px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .member-card > mat-card {
   width: 158px;
   height: 204px;
-  margin: 0 20px;
+  margin: 0 20px 24px;
   float: left; /* to keep them in one row */
 }
 
